<resources>
    <string name="app_name">Pursuit Volley</string>

    <!--Coach Calender Activity-->
    <string name="continue_to_time_selection_text">Continue</string>

    <!--Facebook ID-->
    <string name="facebook_application_id" translatable="false">2495475950488247</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2495475950488247</string>

    <!--Main Activity-->
    <string name="coach_portal_text">coach portal</string>
    <string name="book_an_appointment_button_text">book an playerAppointment</string>

    <!--Coach Profile Activity-->
    <string name="coach_profile_nav_schedule_text">Schedule</string>
    <string name="coach_profile_nav_bio_text">Bio</string>
    <string name="coach_profile_nav_payment_settings_text">Pay Settings</string>
    <string name="coach_profile_nav_sign_out_text">Sign Out</string>
    <string name="coachNameHeader">Name: </string>
    <string name="coachAgeHeader">Age: </string>
    <string name="coachLocationHeader">Location: </string>
    <string name="coachBioHeader">Bio: </string>
    <string name="coach_delete_account_text">delete account</string>

    <!--Coach Schedule Fragment-->
    <string name="coach_schedule_fragment_current_date_title">Current Date</string>
    <string name="sunday_title">Sun</string>
    <string name="monday_title">Mon</string>
    <string name="tuesday_title">Tue</string>
    <string name="wednesday_title">Wed</string>
    <string name="thursday_title">Thu</string>
    <string name="friday_title">Fri</string>
    <string name="saturday_title">Sat</string>


    <!--Coach Bio Fragment-->
    <string name="coach_profile_bio_fragment_edit_bio_button_text">edit info</string>

    <!--Coach Login Activity-->
    <string name="coach_activation_code_text">enter activation code</string>
    <string name="coach_email_address_text">enter email</string>
    <string name="coach_password_text">enter password</string>
    <string name="coach_sign_in_button_text">Sign In</string>
    <string name="coach_sign_up_button_text">Sign Up</string>
    <string name="coach_sign_in_clickable_text">Don\'t have an Account</string>
    <string name="coach_sign_up_clickable_text">Already have an Account</string>

    <!--Player Login Activity-->
    <string name="player_email_address_text">enter email</string>
    <string name="player_password_text">enter password</string>
    <string name="player_sign_in_button_text">Sign In</string>
    <string name="player_sign_up_button_text">Sign Up</string>
    <string name="player_sign_in_clickable_text">Don\'t have an Account</string>
    <string name="player_sign_up_clickable_text">Already have an Account</string>

    <!--Sign Out Pop Up Menu-->
    <string name="sign_out_yes">Yes</string>
    <string name="sign_out_no">No</string>

    <!--Delete Account Pop Up Menu-->
    <string name="coach_deletion_code_text">enter deletion code</string>
    <string name="delete_account_yes">Delete Account</string>
    <string name="delete_account_no">Cancel</string>

    <!--Coach Payment Setting Fragment-->
    <string name="coach_payment_settings_title_text">Direct Deposit</string>
    <string name="coach_institution_number_text">enter institution number</string>
    <string name="coach_transit_number_text">enter transit number</string>
    <string name="coach_account_number_text">enter account number</string>
    <string name="coach_direct_deposit_button_text">enter</string>
    <string name="edit_direct_deposit_info_button_text">edit info</string>
    <string name="view_current_direct_deposit_info_button_text">current info</string>
    <string name="coach_current_institution_number_text">institution_number </string>
    <string name="coach_current_transit_number">transit number </string>
    <string name="coach_current_account_number">account number</string>

    <!--Coach Info Entry Activity-->
    <string name="coach_info_entry_name_text">enter your full name</string>
    <string name="coach_info_entry_age_text">enter your age</string>
    <string name="coach_info_entry_location_text">enter you location</string>
    <string name="coach_info_entry_bio_text">briefly explain your volleyball career</string>
    <string name="coach_info_entry_select_profile_pic_button_text">select profile picture</string>
    <string name="coach_info_entry_button_text">Enter</string>

    <!--Player Info Entry Activity-->
    <string name="player_info_entry_title_text">Personal Info</string>
    <string name="player_info_entry_name_text">enter your full name</string>
    <string name="player_info_entry_age_text">enter your age</string>
    <string name="player_info_entry_location_text">enter you location</string>
    <string name="player_info_entry_phone_number_text">enter phone number</string>
    <string name="player_info_entry_email_text">enter email</string>
    <string name="player_info_entry_button_text">complete sign up</string>

    <!--Player Checkout Activity-->
    <string name="player_checkout_receipt_title">Receipt Info</string>
    <string name="player_checkout_intro_phrase">Your training session contains the following details</string>
    <string name="player_checkout_continue_to_payment_button_text">continue to payment</string>

    <!--Player Profile Activity-->
    <string name="player_profile_title">Your Appointments</string>
    <string name="player_profile_book_an_appointment_button_text">book a new playerAppointment</string>
    <string name="player_current_appointments_tab_text">Current Appointments</string>
    <string name="player_upcoming_events_tab_text">Upcoming Events</string>
    <string name="player_info_tab_text">Info</string>
    <string name="playerNameHeader">Name: </string>
    <string name="playerAgeHeader">Age: </string>
    <string name="playerLocationHeader">Location: </string>
    <string name="playerPhoneNumberHeader">Phone Number: </string>
    <string name="playerEmailHeader">Email: </string>

    <!--Player Credit Card Payment Activity-->
    <string name="make_payment_button_text">Make Payment</string>
    <string name="player_payment_method_title">Payment Method</string>
    <string name="player_add_credit_card_button">Add Card</string>

    <!--Image Picker Activity-->
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!--Upcoming Event Details Activity-->
    <string name="upcoming_event_name">Event: </string>
    <string name="upcoming_event_date">Date: </string>
    <string name="upcoming_event_location">Location: </string>

    <!--font families (resources)-->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
