<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".Player.PlayerInfoEntryActivity">

    <TextView
        android:id="@+id/playerInfoEntryTitle"
        android:text="@string/player_info_entry_title_text"
        android:textSize="54sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/playerInfoEntryNameEditBox"
        android:background="@drawable/circle_background"
        android:hint="@string/player_info_entry_name_text"
        android:textColor="@color/white"
        android:textColorHint="@color/aquaBlue"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/playerInfoEntryTitle"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/playerInfoEntryAgeEditBox"
        android:background="@drawable/circle_background"
        android:hint="@string/player_info_entry_age_text"
        android:textColorHint="@color/aquaBlue"
        android:layout_below="@+id/playerInfoEntryNameEditBox"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/playerInfoEntryLocationEditBox"
        android:background="@drawable/circle_background"
        android:hint="@string/player_info_entry_location_text"
        android:textColorHint="@color/aquaBlue"
        android:layout_below="@+id/playerInfoEntryAgeEditBox"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/playerInfoEntryPhoneNumberEditBox"
        android:background="@drawable/circle_background"
        android:hint="@string/player_info_entry_phone_number_text"
        android:textColorHint="@color/aquaBlue"
        android:layout_below="@+id/playerInfoEntryLocationEditBox"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/playerInfoEntryEmailEditBox"
        android:background="@drawable/circle_background"
        android:hint="@string/player_info_entry_email_text"
        android:textColorHint="@color/aquaBlue"
        android:layout_below="@+id/playerInfoEntryPhoneNumberEditBox"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/playerInfoEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold|italic"
        android:layout_below="@id/playerInfoEntryEmailEditBox"
        android:textSize="24sp"
        android:text="@string/player_info_entry_button_text"
        android:background="@drawable/rounded_corners_blue_background"/>

</RelativeLayout>