<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/orange"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/playerDateSelectionSchedulePreviousButton"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_backward"/>

        <TextView
            android:id="@+id/playerDateSelectionScheduleCurrentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/coach_schedule_fragment_current_date_title"
            android:layout_weight="3"/>
        <ImageButton
            android:id="@+id/playerDateSelectionScheduleNextButton"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_foward"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sunday_title"
            android:background="@color/sunday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monday_title"
            android:background="@color/monday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tuesday_title"
            android:background="@color/tuesday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wednesday_title"
            android:background="@color/wednesday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thursday_title"
            android:background="@color/thursday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/friday_title"
            android:background="@color/friday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/saturday_title"
            android:background="@color/saturday_color"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <GridView
        android:id="@+id/playerDateSelectionScheduleGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7">

    </GridView>

</LinearLayout>